--- a/Hippocampus/Hippocampus.csproj
+++ b/Hippocampus/Hippocampus.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
+    <None Remove="FileOpenTest.txt.vo" />
   </ItemGroup>
   <ItemGroup>
     <!--This helps with theme dll-s trimming.
