Image showing in secondary window

--- a/Hippocampus/Hippocampus.csproj
+++ b/Hippocampus/Hippocampus.csproj
@@ -28,11 +28,11 @@
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Views\HippocampusWindow.axaml.cs">
-      <DependentUpon>%(Filename)</DependentUpon>
+    <Compile Update="Views\MainWindow.axaml.cs">
+      <DependentUpon>MainWindow.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\MainView.axaml.cs">
-      <DependentUpon>MainView.axaml</DependentUpon>
+    <Compile Update="Views\ImageWindow.axaml.cs">
+      <DependentUpon>ImageWindow.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
