Added super class 'FileLocation'

--- a/Hippocampus/Hippocampus.csproj
+++ b/Hippocampus/Hippocampus.csproj
@@ -34,6 +34,9 @@
     <Compile Update="Views\ImageWindow.axaml.cs">
       <DependentUpon>ImageWindow.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\InputFormatView.axaml.cs">
+      <DependentUpon>InputFormatView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\OutputFormatView.axaml.cs">
       <DependentUpon>OutputFormatView.axaml</DependentUpon>
     </Compile>
